// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`healthCheck middleware should return a 200 when all is good 1`] = `
Object {
  "holocron": Object {
    "moduleMapHealthy": true,
    "rootModuleExists": true,
  },
  "process": Object {
    "cpu": 80,
    "memory": 1400000000,
    "tickDelay": Array [
      0,
      100,
    ],
  },
}
`;

exports[`healthCheck middleware should return a 207 when the module map is not healthy 1`] = `
Object {
  "holocron": Object {
    "moduleMapHealthy": false,
    "rootModuleExists": true,
    "status": 500,
  },
  "process": Object {
    "cpu": 80,
    "memory": 1400000000,
    "status": 200,
    "tickDelay": Array [
      0,
      100,
    ],
  },
}
`;

exports[`healthCheck middleware should return a 503 when any threshold has been passed 1`] = `
Object {
  "holocron": Object {
    "moduleMapHealthy": true,
    "rootModuleExists": true,
  },
  "process": Object {
    "cpu": 80.1,
    "memory": 1400000000,
    "tickDelay": Array [
      0,
      100,
    ],
  },
}
`;
